alguma-sintatico/src/main/antlr4/br/ufscar/dc/compiladores/alguma/sintatico/.antlr/AlgumaParser.java
// Generated from /home/gabrielly/projetos/compiladores/alguma-lexico/alguma-sintatico/src/main/antlr4/br/ufscar/dc/compiladores/alguma/sintatico/Alguma.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AlgumaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, TIPO_VAR=42, NUMINT=43, NUMREAL=44, CADEIA=45, 
		VARIAVEL=46, OP_ARIT1=47, OP_ARIT2=48, OP_ARIT3=49, OP_REL=50, ERRO_COMENTARIO=51, 
		COMENTARIO=52, WS=53, CADEIA_NAO_FECHADA=54, COMENTARIO_NAO_FECHADO=55, 
		ABRE_PAR=56, FECHA_PAR=57, ABRE_COL=58, FECHA_COL=59, ERRO=60;
	public static final int
		RULE_var_personalizada = 0, RULE_var_registro = 1, RULE_ponteiro = 2, 
		RULE_endereco = 3, RULE_comandoAtribuicao = 4, RULE_declaracao_tipo = 5, 
		RULE_declaracao_registro = 6, RULE_op_bool = 7, RULE_programa = 8, RULE_declaracao = 9, 
		RULE_expressaoAritmetica = 10, RULE_fatorAritmetico = 11, RULE_expressaoRelacional = 12, 
		RULE_termoRelacional = 13, RULE_listaComandos = 14, RULE_comando = 15, 
		RULE_entrada = 16, RULE_comandoEntrada = 17, RULE_saida = 18, RULE_comandoSaida = 19, 
		RULE_comandoCondicao = 20, RULE_intervalo = 21, RULE_comandoCaso = 22, 
		RULE_comandoEnquanto = 23, RULE_comandoFaca = 24, RULE_comandoPara = 25, 
		RULE_subAlgoritmo = 26, RULE_parametros_chamada_funcao = 27, RULE_chamada_funcao = 28, 
		RULE_parametros_declaracao_funcao = 29, RULE_retorno_funcao = 30, RULE_declaracao_funcao = 31, 
		RULE_procedimento = 32, RULE_declaracao_constante = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"var_personalizada", "var_registro", "ponteiro", "endereco", "comandoAtribuicao", 
			"declaracao_tipo", "declaracao_registro", "op_bool", "programa", "declaracao", 
			"expressaoAritmetica", "fatorAritmetico", "expressaoRelacional", "termoRelacional", 
			"listaComandos", "comando", "entrada", "comandoEntrada", "saida", "comandoSaida", 
			"comandoCondicao", "intervalo", "comandoCaso", "comandoEnquanto", "comandoFaca", 
			"comandoPara", "subAlgoritmo", "parametros_chamada_funcao", "chamada_funcao", 
			"parametros_declaracao_funcao", "retorno_funcao", "declaracao_funcao", 
			"procedimento", "declaracao_constante"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'^'", "'&'", "'<-'", "'tipo'", "':'", "'registro'", "','", 
			"'fim_registro'", "'e'", "'ou'", "'algoritmo'", "'fim_algoritmo'", "'declare'", 
			"'nao'", "'='", "'leia'", "'escreva'", "'se'", "'entao'", "'fim_se'", 
			"'senao'", "'..'", "'caso'", "'seja'", "'fim_caso'", "'enquanto'", "'faca'", 
			"'fim_enquanto'", "'ate'", "'para'", "'fim_para'", "'INICIO'", "'FIM'", 
			"'retorne'", "'funcao'", "'fim_funcao'", "'procedimento'", "'var'", "'fim_procedimento'", 
			"'constante'", null, null, null, null, null, null, null, "'%'", null, 
			null, null, null, null, null, "'('", "')'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "TIPO_VAR", "NUMINT", "NUMREAL", 
			"CADEIA", "VARIAVEL", "OP_ARIT1", "OP_ARIT2", "OP_ARIT3", "OP_REL", "ERRO_COMENTARIO", 
			"COMENTARIO", "WS", "CADEIA_NAO_FECHADA", "COMENTARIO_NAO_FECHADO", "ABRE_PAR", 
			"FECHA_PAR", "ABRE_COL", "FECHA_COL", "ERRO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Alguma.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AlgumaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_personalizadaContext extends ParserRuleContext {
		public TerminalNode VARIAVEL() { return getToken(AlgumaParser.VARIAVEL, 0); }
		public Var_personalizadaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_personalizada; }
	}

	public final Var_personalizadaContext var_personalizada() throws RecognitionException {
		Var_personalizadaContext _localctx = new Var_personalizadaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_var_personalizada);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(VARIAVEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_registroContext extends ParserRuleContext {
		public List<TerminalNode> VARIAVEL() { return getTokens(AlgumaParser.VARIAVEL); }
		public TerminalNode VARIAVEL(int i) {
			return getToken(AlgumaParser.VARIAVEL, i);
		}
		public Var_registroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_registro; }
	}

	public final Var_registroContext var_registro() throws RecognitionException {
		Var_registroContext _localctx = new Var_registroContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_var_registro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(VARIAVEL);
			setState(71);
			match(T__0);
			setState(72);
			match(VARIAVEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PonteiroContext extends ParserRuleContext {
		public PonteiroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ponteiro; }
	}

	public final PonteiroContext ponteiro() throws RecognitionException {
		PonteiroContext _localctx = new PonteiroContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ponteiro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnderecoContext extends ParserRuleContext {
		public EnderecoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endereco; }
	}

	public final EnderecoContext endereco() throws RecognitionException {
		EnderecoContext _localctx = new EnderecoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_endereco);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoAtribuicaoContext extends ParserRuleContext {
		public List<TerminalNode> VARIAVEL() { return getTokens(AlgumaParser.VARIAVEL); }
		public TerminalNode VARIAVEL(int i) {
			return getToken(AlgumaParser.VARIAVEL, i);
		}
		public List<Var_registroContext> var_registro() {
			return getRuleContexts(Var_registroContext.class);
		}
		public Var_registroContext var_registro(int i) {
			return getRuleContext(Var_registroContext.class,i);
		}
		public EnderecoContext endereco() {
			return getRuleContext(EnderecoContext.class,0);
		}
		public ExpressaoRelacionalContext expressaoRelacional() {
			return getRuleContext(ExpressaoRelacionalContext.class,0);
		}
		public ExpressaoAritmeticaContext expressaoAritmetica() {
			return getRuleContext(ExpressaoAritmeticaContext.class,0);
		}
		public Chamada_funcaoContext chamada_funcao() {
			return getRuleContext(Chamada_funcaoContext.class,0);
		}
		public PonteiroContext ponteiro() {
			return getRuleContext(PonteiroContext.class,0);
		}
		public ComandoAtribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandoAtribuicao; }
	}

	public final ComandoAtribuicaoContext comandoAtribuicao() throws RecognitionException {
		ComandoAtribuicaoContext _localctx = new ComandoAtribuicaoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comandoAtribuicao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(78);
				ponteiro();
				}
			}

			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(81);
				match(VARIAVEL);
				}
				break;
			case 2:
				{
				setState(82);
				var_registro();
				}
				break;
			}
			setState(85);
			match(T__3);
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(86);
				endereco();
				setState(89);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(87);
					match(VARIAVEL);
					}
					break;
				case 2:
					{
					setState(88);
					var_registro();
					}
					break;
				}
				}
				break;
			case 2:
				{
				setState(91);
				expressaoRelacional();
				}
				break;
			case 3:
				{
				setState(92);
				expressaoAritmetica();
				}
				break;
			case 4:
				{
				setState(93);
				chamada_funcao();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracao_tipoContext extends ParserRuleContext {
		public TerminalNode VARIAVEL() { return getToken(AlgumaParser.VARIAVEL, 0); }
		public Declaracao_registroContext declaracao_registro() {
			return getRuleContext(Declaracao_registroContext.class,0);
		}
		public Declaracao_tipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_tipo; }
	}

	public final Declaracao_tipoContext declaracao_tipo() throws RecognitionException {
		Declaracao_tipoContext _localctx = new Declaracao_tipoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracao_tipo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__4);
			setState(97);
			match(VARIAVEL);
			setState(98);
			match(T__5);
			setState(99);
			declaracao_registro();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracao_registroContext extends ParserRuleContext {
		public List<TerminalNode> VARIAVEL() { return getTokens(AlgumaParser.VARIAVEL); }
		public TerminalNode VARIAVEL(int i) {
			return getToken(AlgumaParser.VARIAVEL, i);
		}
		public List<TerminalNode> TIPO_VAR() { return getTokens(AlgumaParser.TIPO_VAR); }
		public TerminalNode TIPO_VAR(int i) {
			return getToken(AlgumaParser.TIPO_VAR, i);
		}
		public Declaracao_registroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_registro; }
	}

	public final Declaracao_registroContext declaracao_registro() throws RecognitionException {
		Declaracao_registroContext _localctx = new Declaracao_registroContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaracao_registro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__6);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VARIAVEL) {
				{
				{
				setState(102);
				match(VARIAVEL);
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(103);
					match(T__7);
					setState(104);
					match(VARIAVEL);
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(110);
				match(T__5);
				setState(111);
				match(TIPO_VAR);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Op_boolContext extends ParserRuleContext {
		public Op_boolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_bool; }
	}

	public final Op_boolContext op_bool() throws RecognitionException {
		Op_boolContext _localctx = new Op_boolContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_op_bool);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_la = _input.LA(1);
			if ( !(_la==T__9 || _la==T__10) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AlgumaParser.EOF, 0); }
		public List<Declaracao_constanteContext> declaracao_constante() {
			return getRuleContexts(Declaracao_constanteContext.class);
		}
		public Declaracao_constanteContext declaracao_constante(int i) {
			return getRuleContext(Declaracao_constanteContext.class,i);
		}
		public List<Declaracao_tipoContext> declaracao_tipo() {
			return getRuleContexts(Declaracao_tipoContext.class);
		}
		public Declaracao_tipoContext declaracao_tipo(int i) {
			return getRuleContext(Declaracao_tipoContext.class,i);
		}
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public List<ProcedimentoContext> procedimento() {
			return getRuleContexts(ProcedimentoContext.class);
		}
		public ProcedimentoContext procedimento(int i) {
			return getRuleContext(ProcedimentoContext.class,i);
		}
		public List<Declaracao_funcaoContext> declaracao_funcao() {
			return getRuleContexts(Declaracao_funcaoContext.class);
		}
		public Declaracao_funcaoContext declaracao_funcao(int i) {
			return getRuleContext(Declaracao_funcaoContext.class,i);
		}
		public ListaComandosContext listaComandos() {
			return getRuleContext(ListaComandosContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__40) {
				{
				{
				setState(121);
				declaracao_constante();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(127);
				declaracao_tipo();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				{
				setState(133);
				declaracao();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__37) {
				{
				{
				setState(139);
				procedimento();
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__35) {
				{
				{
				setState(145);
				declaracao_funcao();
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151);
			match(T__11);
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__40) {
				{
				{
				setState(152);
				declaracao_constante();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				{
				setState(158);
				declaracao();
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70414261682180L) != 0)) {
				{
				setState(164);
				listaComandos();
				}
			}

			setState(167);
			match(T__12);
			setState(168);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoContext extends ParserRuleContext {
		public List<TerminalNode> VARIAVEL() { return getTokens(AlgumaParser.VARIAVEL); }
		public TerminalNode VARIAVEL(int i) {
			return getToken(AlgumaParser.VARIAVEL, i);
		}
		public TerminalNode TIPO_VAR() { return getToken(AlgumaParser.TIPO_VAR, 0); }
		public Declaracao_registroContext declaracao_registro() {
			return getRuleContext(Declaracao_registroContext.class,0);
		}
		public Var_personalizadaContext var_personalizada() {
			return getRuleContext(Var_personalizadaContext.class,0);
		}
		public PonteiroContext ponteiro() {
			return getRuleContext(PonteiroContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declaracao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(T__13);
			setState(171);
			match(VARIAVEL);
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(172);
				match(T__7);
				setState(173);
				match(VARIAVEL);
				}
				}
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(179);
			match(T__5);
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(180);
				ponteiro();
				}
			}

			setState(186);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TIPO_VAR:
				{
				setState(183);
				match(TIPO_VAR);
				}
				break;
			case T__6:
				{
				setState(184);
				declaracao_registro();
				}
				break;
			case VARIAVEL:
				{
				setState(185);
				var_personalizada();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressaoAritmeticaContext extends ParserRuleContext {
		public FatorAritmeticoContext fatorAritmetico() {
			return getRuleContext(FatorAritmeticoContext.class,0);
		}
		public ExpressaoAritmeticaContext expressaoAritmetica() {
			return getRuleContext(ExpressaoAritmeticaContext.class,0);
		}
		public TerminalNode OP_ARIT1() { return getToken(AlgumaParser.OP_ARIT1, 0); }
		public TerminalNode OP_ARIT2() { return getToken(AlgumaParser.OP_ARIT2, 0); }
		public TerminalNode OP_ARIT3() { return getToken(AlgumaParser.OP_ARIT3, 0); }
		public ExpressaoAritmeticaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoAritmetica; }
	}

	public final ExpressaoAritmeticaContext expressaoAritmetica() throws RecognitionException {
		ExpressaoAritmeticaContext _localctx = new ExpressaoAritmeticaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expressaoAritmetica);
		int _la;
		try {
			setState(193);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(188);
				fatorAritmetico();
				setState(189);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 985162418487296L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(190);
				expressaoAritmetica();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(192);
				fatorAritmetico();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FatorAritmeticoContext extends ParserRuleContext {
		public TerminalNode NUMINT() { return getToken(AlgumaParser.NUMINT, 0); }
		public TerminalNode NUMREAL() { return getToken(AlgumaParser.NUMREAL, 0); }
		public Chamada_funcaoContext chamada_funcao() {
			return getRuleContext(Chamada_funcaoContext.class,0);
		}
		public TerminalNode VARIAVEL() { return getToken(AlgumaParser.VARIAVEL, 0); }
		public Var_registroContext var_registro() {
			return getRuleContext(Var_registroContext.class,0);
		}
		public PonteiroContext ponteiro() {
			return getRuleContext(PonteiroContext.class,0);
		}
		public TerminalNode ABRE_PAR() { return getToken(AlgumaParser.ABRE_PAR, 0); }
		public ExpressaoAritmeticaContext expressaoAritmetica() {
			return getRuleContext(ExpressaoAritmeticaContext.class,0);
		}
		public TerminalNode FECHA_PAR() { return getToken(AlgumaParser.FECHA_PAR, 0); }
		public TerminalNode CADEIA() { return getToken(AlgumaParser.CADEIA, 0); }
		public FatorAritmeticoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fatorAritmetico; }
	}
